<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:visibility="visible"
    tools:context=".UI.HistoryFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarHistory"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/grey"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/back_btn" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnDeleteHistory"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:background="@drawable/delete_history" />

    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:id="@+id/swHistory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBarHistory">

        <TextView
            android:id="@+id/tvHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="end"
            android:padding="10dp"
            android:textSize="25sp"
            tools:text="test" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
